--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="keywords" content="FUNDACION, ATRAVEZAR, CLINICA, TERAPIA, ACOMPAÑAMIENTO, FAMILIAR, NOSOTROS, TRATAMIENTOS, TERAPIA SOCIAL, TERAPIA FAMILIAR, TERAPIA PSIQUIATRICA, TERAPIA PSICOLOGICA, MERLO, ADICCION, ADICCIONES, RECUPERACION"">
     <title>Fundación Atravezar</title>
   </head>
   <body>
